# DataStructureAndAlgorithmInC

./: CMakeLists.txt  LatinSquareSingleLinkedCircularList.c  LatinSquareSingleLinkedCircularList.h  LinkList.h  LinkedListTest.c  MagicCards.c  MagicCardsSingleLinkedCircularList.c  MagicCardsSingleLinkedCircularList.h  ReversePolishNotationCalculator.c  ReversePolishNotationCalculator.h  SequenceStackTest.c  SequenceStackTest.h  Stack.c  Stack.h  main.c
Algorithm/: BruteForceSubstringSearch.c  BruteForceSubstringSearch.h  EightQueensPuzzle.c  EightQueensPuzzle.h  KnuthMorrisPrattAlgorithm.c  KnuthMorrisPrattAlgorithm.h  LatinSquareSingleLinkedCircularList.c  LatinSquareSingleLinkedCircularList.h  MagicCards.h  MagicCardsSingleLinkedCircularList.c  ReversePolishNotationCalculator.c
Algorithm/SubstringSearch/: SubstringSearch.c  SubstringSearch.h
Commons/: Show.c  Show.h
DataStructure/: LinkList.c
Test/: EightQueensPuzzleTest.c  EightQueensPuzzleTest.h  LinkedListTest.c  LinkedListTest.h  MagicCardsSingleLinkedCircularListTest.c  MagicCardsSingleLinkedCircularListTest.h  SequenceStackTest.c  StringTest.c  StringTest.h
Test/SubstringSearchTest/: SubstringSearchTest.c  SubstringSearchTest.h
