cmake_minimum_required(VERSION 3.19)
project(DataStructureAndAlgorithm C)

set(CMAKE_C_STANDARD 99)

add_executable(DataStructureAndAlgorithm Algorithm/MagicCards.c DataStructure/LinkList.h main.c Algorithm/MagicCards.h Test/LinkedListTest.c Test/LinkedListTest.h DataStructure/LinkList.c Algorithm/MagicCardsSingleLinkedCircularList.c Algorithm/MagicCardsSingleLinkedCircularList.h Algorithm/LatinSquareSingleLinkedCircularList.c Algorithm/LatinSquareSingleLinkedCircularList.h DataStructure/Stack.c DataStructure/Stack.h Algorithm/ReversePolishNotationCalculator.c Algorithm/ReversePolishNotationCalculator.h Test/SequenceStackTest.c Test/SequenceStackTest.h Algorithm/EightQueensPuzzle.c Algorithm/EightQueensPuzzle.h Commons/Show.c Commons/Show.h Test/EightQueensPuzzleTest.c Test/EightQueensPuzzleTest.h Test/MagicCardsSingleLinkedCircularListTest.c Test/MagicCardsSingleLinkedCircularListTest.h Algorithm/KnuthMorrisPrattAlgorithm.c Algorithm/KnuthMorrisPrattAlgorithm.h)